--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
 			crossorigin="anonymous"
 		/>
 		<link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-		<title>Game Search</title>
+		<title>Movie Search</title>
 	</head>
 	<body>
 		<noscript>You need to enable JavaScript to run this app.</noscript>
